# condensed-sparsity

./: .dockerignore  .env.template  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.gcs  LICENSE  README.md  benchmarking_out.txt  benchmarking_out_debug.txt  benchmarking_out_debugging.txt  benchmarking_out_deleted_mods.txt  benchmarking_out_float16_max_autotune.txt  benchmarking_out_full_spread.txt  benchmarking_out_inductor.txt  benchmarking_out_inductor_max_autotune.txt  benchmarking_out_inductor_max_autotune_clone.txt  benchmarking_out_inductor_max_autotune_clone_fullgraph.txt  benchmarking_out_inductor_max_autotune_contigious.txt  benchmarking_out_inductor_reduce_overhead.txt  condensed_sparse.py  config.yaml  docker-cmds.txt  docker-compose.yaml  final_out.txt  final_out_32bit.txt  final_out_bf16.txt  final_out_bf16_40_80_thread.txt  final_out_cpu_only.txt  final_out_f32.txt  final_out_f32_high_prec.txt  final_out_gpu_only.txt  final_out_minnewanka.txt  hector-15nice.txt  hector_out.txt  hector_out_2.txt  (+26 more)
.devcontainer/: devcontainer.json
.github/workflows/: cd.yaml  ci.yaml
configs/: config.yaml
configs/compute/: cifar10.yaml  coco.yaml  imagenet.yaml  vit.yaml
configs/dataset/: cifar10.yaml  coco.yaml  imagenet.yaml  mnist.yaml
configs/model/: cond_net.yaml  maskrcnn.yaml  mnist.yaml  mobilenet_large.yaml  mobilenet_small.yaml  resnet18.yaml  resnet50.yaml  skinny_resnet18.yaml  vit.yaml  wide_resnet22.yaml  wideresnet22.yaml
configs/rigl/: mnist.yaml  mobilenet_large.yaml  mobilenet_small.yaml  resnet18.yaml  resnet50.yaml  resnet50_x5.yaml  vit.yaml
configs/sweep/: cifar10_min_salient_weights_sweep.yaml  cifar10_min_salient_weights_sweep_perc_salient.yaml  cifar10_min_salient_weights_sweep_with_gamma.yaml  cifar10_no_ablation.yaml  cifar10_sweep.yaml  cifar10_sweep_ablation_exp.yaml  cifar10_sweep_init_and_ablation.yaml  cifar10_with_ablation.yaml  fixed_cifar10_sweep_init_and_ablation.yaml  good_cifar10_sweep_init_and_ablation.yaml  imagenet_no_ablation.yaml  imagenet_sweep.yaml  imagenet_x5.yaml  min_salient_sweep.yaml  mobilenet_large.yaml  mobilenet_small.yaml  skinny_resnet.yaml  vit_in_proj.yaml  vit_min_sal_sparse_mha.yaml  vit_min_weights.yaml  wideresnet22_min_salient.yaml  wideresnet22_min_salient_with_sparse_fan.yaml
configs/training/: maskrcnn.yaml  mobilenet_large.yaml  resnet18.yaml  resnet50_x5.yaml  vit.yaml  wide_resnet22.yaml
data/: imagenet_labels.yaml
data/svhn_resnet18/: test.pt.REMOVED.git-id
examples/: main.py  models.py  utils.py
fig/: .gitignore
notebooks/: activation_functions.ipynb  anna_main.ipynb  benchmarks.ipynb  benchmarks_sparseprop.ipynb  benchmarks_v2.ipynb  benchmarks_v2_gpu.ipynb  checkpoint_scratch.ipynb  checkpoint_test.ipynb  cifar10_sweep_results.ipynb  condensed_rigl.ipynb  dict.csv  dist_len_test.py  erk.ipynb  filter_ablation_threshold.ipynb  filter_salency.ipynb  final_results.ipynb  flops.ipynb  gcp_integration_sandbox.ipynb  imagenet_scratch.ipynb  imagenet_scratch.py  jax_benchmarks.ipynb  main.ipynb  main_segmentation.ipynb  min_sal_improvement.ipynb  plt_plot_style.mplstyle  plt_plot_style_y_ticks.mplstyle  sandbox.ipynb  sparse_init.ipynb  sparse_ops.ipynb  triton_test.ipynb  updated_benchmarks.ipynb  utils_eval.py  wandb_cleanup.ipynb  wide_resnet22.ipynb  wrapper_test.ipynb
scripts/: batch_build.sh  benchmark_fine_grained_only.py  benchmarks.py  benchmarks_3dim.py  benchmarks_v2.py  benchmarks_v2_rigl_layers.py  build_cc_venv.sh  build_compute_canada_venv.sh  build_denvr_venv.sh  build_gcs_container.sh  complete_cifar_sweep.sh  complete_sweep.py  copy_art.sh  download_sweep_table.py  experiments.sh  experiments_wide.sh  extract.sh  extract_imagenet.py  gcs_post_start_script.sh  get_imagenet.sh  imagenet_itop_hyperparams.sh  sparse_ops_benchmarks.py  train_imagenet_rigl.py  train_mnist_rigl.py  xmanager_launcher.py
slurm/: arc_wandb_agent.sh  extract_imagenet.sh  get-imagenet-data.sh  imagenet_30_sal.sh  imagenet_itop.sh  imagenet_wandb_agent.sh  imagenet_x5_resume.sh  imagenet_x5_wandb_agent.sh  imagenet_x5_wandb_agent_resume.sh  manual_missing_sweeps.sh  run_train_rigl.sh  train_imagenet.sh  train_imagenet_arc.sh  train_imagenet_narval.sh  train_imagenet_x2.sh  vit_cedar_wandb_agent.sh  vit_graham_wandb_agent.sh  vit_main_cedar.sh  vit_main_cedar_v2.sh  vit_main_cedar_v3.sh  vit_main_narv.sh  vit_stem.sh  wandb_agent.sh  wandb_agent_resume.sh
src/cc/condensed-sparsity/: CMakeLists.txt  setup.py
src/condensed_sparsity/: __init__.py  condensed_linear.py  main.py  utils.py
src/condensed_sparsity/superseded/: __init__.py  linear_condensed.py  models.py  utils.py
src/condensed_sparsity/v2/: condensed_linear.py  jax_condensed_linear.py
src/micronet_challenge/: counting.py  run.sh
src/rigl-torch/: .gitignore  setup.py  train_imagenet_rigl.py  train_mnist_rigl.py
src/rigl-torch/rigl_torch/: RigL.py  RigL_constant_fan.py  plot_utils.py  util.py
src/rigl_torch/: RigL.py  exceptions.py  rigl_constant_fan.py  rigl_scheduler.py  util.py
src/rigl_torch/datasets/: __init__.py  _cc_imagenet_folder.py  _cifar.py  _coco.py  _coco_detection_v2.py  _data_stem.py  _imagenet.py  _mnist.py  _mobilenet_imagenet.py  _transforms.py  _utils.py  _vit_imagenet.py
src/rigl_torch/meters/: __init__.py  filter_meter.py  layer_meter.py  segmentation_meter.py  training_meter.py
src/rigl_torch/models/: __init__.py  _utils.py  condensed_linear.py  imagenet_models.py  maskrcnn.py  mnist.py  mobilenet.py  model_factory.py  resnet.py  resnet18.py  updated_resnet.py  vit.py  wide_resnet.py
src/rigl_torch/optim/: __init__.py  _utils.py  cosine_annealing_with_linear_warm_up.py  step_lr_with_linear_warm_up.py
src/rigl_torch/utils/: checkpoint.py  (+12 more)
tests/: conftest.py
tests/condensed_sparsity_tests/: test_linear_condensed.py
tests/rigl-torch/: analyze_sparsity.py  test_rigl.py  test_rigl_constant_fan.py  test_utils.py
tests/rigl_torch_tests/: analyze_sparsity.py  test_rigl.py  test_rigl_constant_fan.py  test_utils.py
tests/utils/: mocks.py
(+13 files in other folders)
