[metadata]
name = condensed-sparsity
version = 0.1
author = CalgaryAI Lab
author_email = TBD
url = https://github.com/calgaryml/condensed-sparsity
description = TBD
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = TBD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/calgaryml/condensed-sparsity/issues
    Changelog = https://github.com/calgaryml/condensed-sparsity/blob/master/CHANGELOG.md

[options]
include_package_data = True
python_requires = >= 3.8
packages = find:
package_dir = 
    =src
test_suite = tests
setup_requires =
    setuptools >=46.4.0 
install_requires =
    torch>=1.0
    torchvision
    tensorboard
    wandb
    python-dotenv
    omegaconf
    hydra-core

tests_require =
    pytest
    flake8
    black==22.3.0
    pre-commit
    pytest-cov
    ipykernel


[options.packages.find]
where=src
